# GlotNet

./: .flake8  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  environment-cpu.yml  environment.yml  pyproject.toml  requirements.txt  run_docker.sh  setup-skbuild.py  setup.py
.github/workflows/: pypi-cibuildwheel.yml  python-package-conda.yml  python-package.yml
config/: config.json  config_glotnet.json  config_small.json
examples/: inverse_filtering.py  lfilterIIR.h  train.py  train_arctic.py
ext/: bindings.cpp
ext/bind/: Activations.cpp  Convolution.cpp  ConvolutionLayer.cpp  ConvolutionStack.cpp  Distributions.cpp  GlotNetAR.h  LFilter.cpp  LFilter.h  WaveNet.cpp  WaveNetAR.cpp  WaveNetAR.h
ext/src/: Activations.cpp  Activations.h  Convolution.cpp  Convolution.h  ConvolutionLayer.cpp  ConvolutionLayer.h  ConvolutionStack.cpp  ConvolutionStack.h  Distributions.cpp  Distributions.h  GlotNetAR.cpp  GlotNetAR.h  LFilter.h  WaveNet.cpp  WaveNet.h  WaveNetAR.cpp  WaveNetAR.h
glotnet/: __init__.py  activations.py  config.py  convolution.py  convolution_layer.py  convolution_stack.py  copy_synthesis.py  train.py  wavenet.py  wavenet_ar.py
glotnet/data/: audio_dataset.py  data.py
glotnet/losses/: distributions.py
glotnet/model/: activations.py  convolution.py  convolution_layer.py  convolution_stack.py  wavenet.py  wavenet_ar.py
glotnet/model/autoregressive/: convolution.py  glotnet.py  wavenet.py
glotnet/model/feedforward/: activations.py  convolution.py  convolution_layer.py  wavenet.py
glotnet/sigproc/: allpole.py  biquad.py  emphasis.py  filter.py  levinson.py  lfilter.py  lpc.py  melspec.py  oscillator.py
glotnet/train/: config.py  train.py  trainer.py
glotnet/trainer/: trainer.py  trainer_glotnet.py
python/: __init__.py  convolution.py  convolution_layer.py  convolution_stack.py  wavenet.py
src/glotnet/: copy_synthesis.py
src/glotnet/data/: audio_dataset.py  config.py
src/glotnet/sigproc/: levinson.py
src/glotnet/trainer/: config.py  trainer_glotnet.py
test/: test_activations.py  test_convolution.py  test_convolution_layer.py  test_convolution_stack.py  test_cross_compat.py  test_sigproc.py  test_wavenet.py  test_wavenet_ar.py
test/test_data/: test_audio_dataset.py
test/test_distribution/: test_distribution.py
test/test_model/: test_activations.py  test_convolution.py  test_convolution_layer.py  test_convolution_stack.py  test_cross_compat.py  test_glotnet.py  test_wavenet.py  test_wavenet_ar.py  test_wavenet_noncausal.py
test/test_sigproc/: test_allpole.py  test_biquad.py  test_emphasis.py  test_filter.py  test_inverse_filter.py  test_levinson.py  test_lfilter.py  test_linear_prediction.py  test_lsf.py  test_melspec.py
test/test_trainer/: test_config.py  test_copy_synthesis.py  test_train.py  test_trainer.py  test_trainer_glotnet.py
